--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.0.2",
+    "react-virtualized": "^9.22.3",
     "react-virtualized-auto-sizer": "^1.0.4",
     "react-window": "^1.8.6",
     "redux": "^4.0.5",
