--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-infinite-scroll-component": "^5.1.0",
