--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@sentry/react": "^6.0.4",
     "@sentry/tracing": "^6.0.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -28,6 +29,7 @@
     "react-window": "^1.8.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "redux-toolkit": "^1.1.2",
     "styled-components": "^5.2.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
