--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-device-detect": "^1.15.0",
